--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "alexjustesen/filament-spatie-laravel-activitylog": "^0.7",
         "filament/filament": "^3.0-stable",
         "guzzlehttp/guzzle": "^7.2",
+        "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.16",
         "livewire/livewire": "^3.0@beta",
+        "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-medialibrary": "^10.0.0"
     },
     "require-dev": {
