--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "league/flysystem-aws-s3-v3": "^3.16",
         "livewire/livewire": "^3.0@beta",
         "spatie/laravel-activitylog": "^4.7",
-        "spatie/laravel-medialibrary": "^10.0.0"
+        "spatie/laravel-medialibrary": "^10.0.0",
+        "spatie/laravel-sluggable": "^3.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
